# Simulation_gazebo

./: .gitignore  README.md
src/assignment_3a/: CMakeLists.txt  package.xml
src/assignment_3a/launch/: obstacle_avoidance.launch.py
src/assignment_3a/main_node/: CMakeLists.txt
src/assignment_3a/main_node/include/: data_serializer.hpp  main_node.hpp  ros_data_provider.hpp
src/assignment_3a/main_node/src/: data_serializer.cpp  main_node.cpp  ros_data_provider.cpp
src/assignment_3a/solver/: CMakeLists.txt
src/assignment_3a/solver/include/: common_data_types.h  idata_serializer.h  idataprovider.h  isolver.h  jthread.h  laplacesolver.h  solver.h  thread_safe_queue.hpp
src/assignment_3a/solver/src/: isolver.cpp  jthread.cpp  laplacesolver.cpp  linearsolver.cpp  solver.cpp
src/assignment_3a/src/: main_swc.cpp
src/oa_simulations/: CMakeLists.txt  package.xml
src/oa_simulations/launch/: obstacle_avoidance.launch.py
src/oa_simulations/main_node/: CMakeLists.txt
src/oa_simulations/main_node/include/: data_serializer.hpp  main_node.hpp
src/oa_simulations/main_node/src/: data_serializer.cpp  main_node.cpp  ros_data_provider.cpp
src/oa_simulations/solver/: CMakeLists.txt
src/oa_simulations/solver/include/: common_data_types.h  idata_serializer.h  idataprovider.h  isolver.h  linearsolver.h  solver.h
src/oa_simulations/solver/src/: isolver.cpp  laplacesolver.cpp  solver.cpp
src/oa_simulations/worlds/: obstacle_avoidance.sdf
src/turtlebot3/turtlebot3/turtlebot3_teleop/: setup.py
