<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oa_simulations</name>
  <version>0.1.0</version>
  <description>Sumilation Obstacle avoidance method in gazebo</description>
  <maintainer email="ihor.berizka@gmail.com">ihor</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>turtlebot3_simulations</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
